objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Accepts_Reimbursement_for_Referral__c</fullName>
        <inlineHelpText>Will accept reimbursement for referrals?</inlineHelpText>
        <label>Accepts Reimbursement for Referral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accepts_Reimbursements_for_Referrals__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>will accept reimbursement for referrals</inlineHelpText>
        <label>Accepts Reimbursements for Referrals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_ID__c</fullName>
        <description>Temporary ID until a OneKey ID gets assigned</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Acknowledgement ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <inlineHelpText>HCP Affiliations: Classification of the physician&apos;s affiliate organization (hospital, outpatient, academic, etc)</inlineHelpText>
        <label>Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Compounding</fullName>
                </value>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Health Department</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Osteopathic Medical School</fullName>
                </value>
                <value>
                    <fullName>Distributor - Corporate Headquarters</fullName>
                </value>
                <value>
                    <fullName>Home Health</fullName>
                </value>
                <value>
                    <fullName>Nursing Homes</fullName>
                </value>
                <value>
                    <fullName>Residential Facilities</fullName>
                </value>
                <value>
                    <fullName>Assisted Living</fullName>
                </value>
                <value>
                    <fullName>Central Fill</fullName>
                </value>
                <value>
                    <fullName>Independent Living</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Software Vendor</fullName>
                </value>
                <value>
                    <fullName>Physical Medicine and Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Psychiatric Hospital</fullName>
                </value>
                <value>
                    <fullName>Clinical Laboratory</fullName>
                </value>
                <value>
                    <fullName>Outpatient Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Alternative Medicine</fullName>
                </value>
                <value>
                    <fullName>Adult Day Care</fullName>
                </value>
                <value>
                    <fullName>Managed Care</fullName>
                </value>
                <value>
                    <fullName>Employee Assistance Programs</fullName>
                </value>
                <value>
                    <fullName>Non-health Delivery</fullName>
                </value>
                <value>
                    <fullName>Blood Bank</fullName>
                </value>
                <value>
                    <fullName>Research Institute</fullName>
                </value>
                <value>
                    <fullName>City/County/State</fullName>
                </value>
                <value>
                    <fullName>Mail Service</fullName>
                </value>
                <value>
                    <fullName>Executive Health Program</fullName>
                </value>
                <value>
                    <fullName>Medical Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation_to_Organization__c</fullName>
        <inlineHelpText>HCP Affiliations: Classification of the physician&apos;s affiliate organization (hospital, outpatient, academic, etc)</inlineHelpText>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Compounding</fullName>
                </value>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Health Department</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Osteopathic Medical School</fullName>
                </value>
                <value>
                    <fullName>Distributor - Corporate Headquarters</fullName>
                </value>
                <value>
                    <fullName>Home Health</fullName>
                </value>
                <value>
                    <fullName>Nursing Homes</fullName>
                </value>
                <value>
                    <fullName>Residential Facilities</fullName>
                </value>
                <value>
                    <fullName>Assisted Living</fullName>
                </value>
                <value>
                    <fullName>Central Fill</fullName>
                </value>
                <value>
                    <fullName>Independent Living</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Software Vendor</fullName>
                </value>
                <value>
                    <fullName>Physical Medicine and Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Psychiatric Hospital</fullName>
                </value>
                <value>
                    <fullName>Clinical Laboratory</fullName>
                </value>
                <value>
                    <fullName>Outpatient Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Alternative Medicine</fullName>
                </value>
                <value>
                    <fullName>Adult Day Care</fullName>
                </value>
                <value>
                    <fullName>Managed Care</fullName>
                </value>
                <value>
                    <fullName>Employee Assistance Programs</fullName>
                </value>
                <value>
                    <fullName>Non-health Delivery</fullName>
                </value>
                <value>
                    <fullName>Blood Bank</fullName>
                </value>
                <value>
                    <fullName>Research Institute</fullName>
                </value>
                <value>
                    <fullName>City/County/State</fullName>
                </value>
                <value>
                    <fullName>Mail Service</fullName>
                </value>
                <value>
                    <fullName>Executive Health Program</fullName>
                </value>
                <value>
                    <fullName>Medical Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Method_Preference__c</fullName>
        <inlineHelpText>Which is the preferred method of contact for you?</inlineHelpText>
        <label>Contact Method Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Method_Preference</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName&amp;&quot; &quot;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_DelegateAccessLevel__c</fullName>
        <description>Access level for HCP delegate</description>
        <label>HCP Delegate Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All of same responsibilities. But can&apos;t delegate to others</fullName>
                </value>
                <value>
                    <fullName>All, except referring a patient or delegate to others</fullName>
                </value>
                <value>
                    <fullName>Support Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCP_Interest__c</fullName>
        <label>HCP Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
                <value>
                    <fullName>Sub Investigator</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCP_Interested_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HCP Interested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_Opt_In_Patient_Status_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCP Opt In Patient Status Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Opt_In_Referral_Status_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCP Opt In Referral Status Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Opt_In_Study_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCP Opt In Study Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigator_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Investigator Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_First_Logon__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is First Logon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Session_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKeyID__c</fullName>
        <description>QI One Key ID Number. If an existing HCP, then value will come from ACOE.  If self-enroll, OneKey API to be called to determine if HCP exists.  Otherwise, this will get updated based on the Acknowledgement ID from OneKey.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>OneKey ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OneKey_ID__c</fullName>
        <description>QI One Key ID Number. If an existing HCP, then value will come from ACOE.  If self-enroll, OneKey API to be called to determine if HCP exists.  Otherwise, this will get updated based on the Acknowledgement ID from OneKey.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>OneKey ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Email__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Initially populated by Data Factory value, available for override</inlineHelpText>
        <label>Override Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Override_Mailing_Address__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Initially populated by Data Factory value, available for override</inlineHelpText>
        <label>Override Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Phone__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Initially populated by Data Factory value, available for override</inlineHelpText>
        <label>Override Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PI_DelegateAccessLevel__c</fullName>
        <description>Access level for PI delegate</description>
        <label>PI Delegate Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All of same responsibilities. But can&apos;t delegate to others</fullName>
                </value>
                <value>
                    <fullName>All, except accepting HCP or delegate to others</fullName>
                </value>
                <value>
                    <fullName>Support Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_Opt_In_Status_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participant Opt In Status Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Reimbursement_Currency__c</fullName>
        <label>Preferred Reimbursement Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Reimbursement_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prequalified__c</fullName>
        <inlineHelpText>Is the buyer Prequalified?</inlineHelpText>
        <label>Prequalified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Trial_Experience__c</fullName>
        <description>HCP Does the physician have trial experience Y N</description>
        <inlineHelpText>HCP Does the physician have trial experience Y N</inlineHelpText>
        <label>Previous Trial Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_MDM_Is_Privacy_Law_Enabled_IMS__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, this account is flagged for Privacy Law regulations.</description>
        <inlineHelpText>If checked, this account is flagged for Privacy Law regulations.</inlineHelpText>
        <label>Is Privacy Law Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trials_in_Last_12_Months__c</fullName>
        <inlineHelpText>How many clinical trials has the physician participated in the last 12 months?</inlineHelpText>
        <label>Trials in Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trials_in_Last_36_Months__c</fullName>
        <inlineHelpText>How many clinical trials has the physician participated in the last 36 months?</inlineHelpText>
        <label>Trials in Last 36 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Affiliate_Organization__c</fullName>
        <inlineHelpText>Acute care or long term hospital, office, psychiatric facility, etc</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Outpatient Center</fullName>
                </value>
                <value>
                    <fullName>Correctional Facility</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Healthcare Information Technology</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Elder Care</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Work place Wellness</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Veterinary Medicine</fullName>
                </value>
                <value>
                    <fullName>Acute Care</fullName>
                    <isActive>false</isActive>
                    <label>Acute Care</label>
                </value>
                <value>
                    <fullName>Long Term Hospital</fullName>
                    <isActive>false</isActive>
                    <label>Long Term Hospital</label>
                </value>
                <value>
                    <fullName>Office</fullName>
                    <isActive>false</isActive>
                    <label>Office</label>
                </value>
                <value>
                    <fullName>Psychiatric Facility</fullName>
                    <isActive>false</isActive>
                    <label>Psychiatric Facility</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserCommunityIsDelegate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Community Is Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>primaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact of a delegate</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>userCommunityMode__c</fullName>
        <description>Current view point for Community</description>
        <label>User Community Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>userCommunity_ShowTour__c</fullName>
        <defaultValue>&quot;PI;HCP;Participant&quot;</defaultValue>
        <label>User Community Show Tour</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>userCommunytyType__c</fullName>
        <description>User types for community - HCP / PI / Participant</description>
        <inlineHelpText>Select user types for community</inlineHelpText>
        <label>User Community Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>OneKeyID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>MASTER</fullName>
        <active>true</active>
        <label>MASTER</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>